# pm-bot

./: .gitignore  README.md  config.example.env  config.example.json  pyproject.toml
docs/: btc-5m-15m-trading-plan.md
docs/plans/: live-trading-enable.md
docs/superpowers/plans/: 2026-04-19-pm-bot-live-submission-replay-safe.md  2026-04-19-pm-bot-order-hash-recovery.md  2026-04-19-pm-bot-production-ready.md
fixtures/: btc-5m-paper-trade.json
src/pm_bot/: __init__.py  cli.py  clients.py  config.py  execution.py  filters.py  live_guards.py  live_recorder.py  live_service.py  metrics.py  models.py  money.py  polymarket_live_client.py  recorder.py  retry.py  risk.py  service.py  signals.py
tests/: test_clients.py  test_filters_and_risk.py  test_live_client.py  test_live_recorder.py  test_live_service.py  test_recorder_and_cli.py  test_service.py  test_signals.py
