[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-bot"
version = "0.1.0"
description = "Minimal paper-trading MVP for BTC 5m/15m Polymarket markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pm-bot = "pm_bot.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
